src/test/deca/context/invalid/created/Objet/Passe_2/VoidParameter.deca
// Description:
//    teste la definition de methode avec un void dans la signature
// Resultats:
//    VoidParameter.deca:7:13: Error: Method parameters cannot have a void type

class C {
    int getx(void a, boolean b) {

    }
}

{

}